04/01 update: 修改配置文件

--- a/source/_posts/20230401_oniskill.md
+++ b/source/_posts/20230401_oniskill.md
@@ -3,7 +3,7 @@ title: 【缺氧】细节技巧（冷知识）
 date: 2023-04-01 09:55:17
 tags: 缺氧
 updated: 2023-04-01 09:55:17
-categories: 游戏攻略
+categories: 游戏
 keywords: 
 description: 缺氧游戏中的一些小知识
 top_img: https://www.klei.com/sites/default/files/games/oxygen-not-included/assets/oxygen-not-includedpromo.png
